[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/startLevel3.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/personaje1.png" type="Texture" id=2]
[ext_resource path="res://fuentetexto.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/sprites/boton.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/buttons/viajaralpasado.png" type="Texture" id=5]
[ext_resource path="res://assets/backgrounds/escenalevel3.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 749.718, 446.695 ), Vector2( 755, 446.695 ) ]
}

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Animation" id=7]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 129, 41 ), Vector2( 129, 50 ), Vector2( 129, 55 ), Vector2( 138, 55 ) ]
}

[node name="startLevel3" type="Control"]
pause_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 74.0
margin_bottom = 3.05176e-05
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 28.0
margin_top = 252.958
margin_right = 111.0
margin_bottom = 392.958
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 390.0
margin_right = 780.0
margin_bottom = 480.0
color = Color( 0.678431, 0.596078, 0.6, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 28.0
margin_top = 375.775
margin_right = 111.0
margin_bottom = 402.775
color = Color( 0.32549, 0.141176, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 28.0
margin_top = 382.693
margin_right = 111.0
margin_bottom = 396.693
text = "Ely"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="descripcion" type="Label" parent="."]
margin_left = 30.0
margin_top = 412.685
margin_right = 770.0
margin_bottom = 456.685
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.32549, 0.141176, 0.247059, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="next" type="TextureRect" parent="."]
visible = false
anchor_left = 0.97
anchor_top = 0.949
anchor_right = 0.97
anchor_bottom = 0.949
margin_left = 749.718
margin_top = 446.695
margin_right = 775.718
margin_bottom = 474.695
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="next"]
autoplay = "texto"
anims/texto = SubResource( 1 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 336.0
margin_top = 450.0
margin_right = 474.0
margin_bottom = 505.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -8.0
margin_right = 56.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EMPEZAR NIVEL 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button"]
autoplay = "button"
anims/button = SubResource( 7 )
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
